@@ -1,3 +1,12 @@
+2016-09-29  Joseph Pecoraro  <pecoraro@apple.com>
+
+        Arrow functions do not infer name from computed property but normal functions do
+        https://bugs.webkit.org/show_bug.cgi?id=162720
+
+        Reviewed by Saam Barati.
+
+        * stress/inferred-names.js:
+
 2016-09-29  Mark Lam  <mark.lam@apple.com>
 
         Break some slow running tests into smaller bits so they don't time out.
